unpackaged/main/default/objects/Account_Vault__c/Account_Vault__c.object-meta.xml
<CustomObject>
    <description>Used to store account passwords to various systems that we support</description>
    <label>Password Vault</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Account Vault Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Password Vaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>