unpackaged/main/default/objects/Account_Vault__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Password Vaults</relationshipLabel>
    <relationshipName>Password_Vaults</relationshipName>
    <type>Lookup</type>
</CustomField>