unpackaged/main/default/objects/Account_Vault__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
            <value>
                <fullName>RDP</fullName>
            </value>
            <value>
                <fullName>ShoreTel HQ Director</fullName>
            </value>
            <value>
                <fullName>ShoreTel HQ Windows</fullName>
            </value>
            <value>
                <fullName>ECC Director</fullName>
            </value>
            <value>
                <fullName>ECC Windows</fullName>
            </value>
            <value>
                <fullName>Oaisys</fullName>
            </value>
            <value>
                <fullName>Email Server</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Active Directory</fullName>
            </value>
            <value>
                <fullName>Web Hosting</fullName>
            </value>
            <value>
                <fullName>DNS Service</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>FTP Sites</fullName>
            </value>
            <value>
                <fullName>Domain Registration</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Email -  Hosting</fullName>
            </value>
            <value>
                <fullName>Email - Spam Filter</fullName>
            </value>
            <value>
                <fullName>Remote Access - Server</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>Accounting Software</fullName>
            </value>
            <value>
                <fullName>Remote Access - User Workstations</fullName>
            </value>
            <value>
                <fullName>Remote Access - Power Switch</fullName>
            </value>
            <value>
                <fullName>Licensing - Software</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Storage - NAS,iSCSI,array</fullName>
            </value>
            <value>
                <fullName>Vendor - Partner Program</fullName>
            </value>
            <value>
                <fullName>Security - Cameras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>