unpackaged/main/default/objects/Account_Vault__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>60</length>
    <type>Text</type>
</CustomField>