unpackaged/main/default/objects/Account_Vault__c/fields/URL_IP__c.field-meta.xml
<CustomField>
    <fullName>URL_IP__c</fullName>
    <label>URL/IP</label>
    <type>Url</type>
</CustomField>